--- a/GfStudio/GfStudio.csproj
+++ b/GfStudio/GfStudio.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.18" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.18" PrivateAssets="all" />
+    <PackageReference Include="mudblazor" Version="8.13.0" />
   </ItemGroup>
 
   <ItemGroup>
