--- a/GfEngine/GfEngine.csproj
+++ b/GfEngine/GfEngine.csproj
@@ -2,6 +2,9 @@
   <ItemGroup>
     <ProjectReference Include="..\GfToolkit.Shared\GfToolkit.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NCalc" Version="1.3.8" />
+  </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
